# Python

./: 100_html_data1.html  Calculater.py  Number_to_letter.py  PyWhatKit_DB.txt  Python cheat shit.txt  _.py  anime.txt  array_genrater.py  cmpf.py  data.html  example.sh  google_form_automate.py  hehe.txt  hello.py  help.ipynb  help.py  index.html  jj.csv  jj.py  jj.sh  main.vbs  music.html  new.py  nigger.py  nigger.txt  oooooo.py  open_and_close.py  ployalphabatic_encoder.py  requirements.txt  sadkhjfl.txt  sax.txt  sdlkjf.txt  tempCodeRunnerFile.py  test.py  time  transposinal_encodeing.py  what.py  word_list.txt  x.html  xxx.py  (+1 more)
Blog_Site/: db.sqlite3  manage.py  pyproject.toml  redme.md  requirements.txt
Blog_Site/.VSCodeCounter/2024-01-06_23-15-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Blog_Site/Blog_Site/: asgi.py  settings.py  urls.py  wsgi.py
Blog_Site/main/: admin.py  forms.py  models.py  urls.py  views.py
Blog_Site/main/migrations/: 0001_initial.py  0002_alter_post_body.py  0002_rename_post_blog.py  0003_alter_comment_comment.py  0003_rename_blog_post.py  0004_remove_profile_bio_profile_about.py  0005_alter_profile_avatar.py  0006_alter_profile_avatar.py  0007_dislikes_likes.py  0008_alter_dislikes_user_alter_likes_user.py
Blog_Site/main/templates/main/: about.html  contact.html  create_post.html  edit_post.html  edit_profile.html  home.html  (+4 more)
Blog_Site/static/: staticfiles.json
Blog_Site/static/css/: styles.css
Blog_Site/templates/: footer.html  header.html  index.html  navbar.html
(+1098 files in other folders)
